--- a/FermaOnline/Views/Experiment/Create.cshtml
+++ b/FermaOnline/Views/Experiment/Create.cshtml
@@ -69,8 +69,8 @@
     </div>
 </form>
 @section Scripts {
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+    <link href="summernote.css">
+    <script src="summernote.js"></script>
     <script>
         $(document).ready(function () {
             $('#Description').summernote({
