--- a/FermaOnline/Views/Experiment/Index.cshtml
+++ b/FermaOnline/Views/Experiment/Index.cshtml
@@ -1,62 +1,65 @@
 ﻿@model IEnumerable<Experiment>
 
-<div class="container p-3">
-    <div class="row pt-4">
-        <div class="col-6">
-            <h2 class="text-primary">All experiments-Admin view</h2>
-        </div>
-        <div class="col-6 text-right">
-            <a type="button" class="btn btn-primary" asp-controller="Experiment" asp-action="Create">Add experiment</a>
-        </div>
-  
+    <div class="container p-3">
+        <div class="row pt-4">
+            <div class="col-6">
+                <h2 class="text-primary">All experiments-Admin view</h2>
+            </div>
+            <div class="col-6 text-right">
+                <a type="button" class="btn btn-primary" asp-controller="Experiment" asp-action="Create">Add experiment</a>
+            </div>
 
+
+        </div>
+        <br />
+        @if (Model.Count() > 0)
+        {
+            <table id="experiments" class="table table-bordered table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>
+                            Name
+                        </th>
+                        <th>
+                            Start date
+                        </th>
+                        <th>
+                            End date
+                        </th>
+                        <th>
+                            Action
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var experiment in Model)
+                    {
+                        var style = experiment.Status ? "btn btn-success mx-1" : "btn btn-warning mx-1";
+                        var start = DateTime.Compare(experiment.Start, new DateTime(0001, 01, 01)) == 0 ? "-" : experiment.Start.ToString("dd/MM/yyyy");// porównaj czy nie jest null i wyświetl w dobrym formacie jak jest null to -
+                        var end = DateTime.Compare(experiment.End, new DateTime(0001, 01, 01)) == 0 ? "-" : experiment.End.ToString("dd/MM/yyyy");
+                        <tr>
+                            <td width="30%">
+                                @experiment.Name<br>
+                                @experiment.ShortDescription
+
+                            </td>
+                            <td width="30%"> @start</td>
+                            <td width="30%"> @end</td>
+                            <td width="40%">
+                                <div class="w-100 btn-group" role="group">
+                                    <a asp-controller="Experiment" asp-route-id="@experiment.Id" asp-action="Show" class="@style mx-1">Check</a>
+                                    <a asp-controller="Experiment" asp-action="Update" asp-route-Id="@experiment.Id" class="btn btn-primary mx-1">Update</a>
+                                    <a asp-controller="Experiment" asp-action="Delete" asp-route-Id="@experiment.Id" class="btn btn-danger mx-1">Delete</a>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+        else
+        { <p>No studies conducted</p>}
     </div>
-    <br />
-    @if (Model.Count() > 0)
-    {
-        <table class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Start date
-                    </th>
-                    <th>
-                        End date
-                    </th>
-                    <th>
-                       Action
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var experiment in Model)
-                {
-                    var style = experiment.Status ? "btn btn-success mx-1" : "btn btn-warning mx-1";
-                    var start = DateTime.Compare(experiment.Start, new DateTime(0001, 01, 01)) == 0 ? "-" : experiment.Start.ToString("dd/MM/yyyy");// porównaj czy nie jest null i wyświetl w dobrym formacie jak jest null to -
-                    var end = DateTime.Compare(experiment.End, new DateTime(0001, 01, 01)) == 0 ? "-" : experiment.End.ToString("dd/MM/yyyy");
-                <tr>
-                    <td width="30%">
-                        @experiment.Name<br>
-                        @experiment.ShortDescription
-                       
-                    </td>
-                    <td width="30%"> @start</td>
-                    <td width="30%"> @end</td>
-                    <td width="40%">
-                        <div class="w-100 btn-group" role="group">
-                            <a asp-controller="Experiment" asp-route-id="@experiment.Id" asp-action="Show" class="@style mx-1">Check</a>
-                            <a asp-controller="Experiment" asp-action="Update" asp-route-Id="@experiment.Id" class="btn btn-primary mx-1">Update</a>
-                            <a asp-controller="Experiment" asp-action="Delete" asp-route-Id="@experiment.Id" class="btn btn-danger mx-1">Delete</a>
-                        </div>
-                    </td>
-                </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    { <p>No studies conducted</p>}
-</div>
+<script>     $('#experiments').dataTable({
+     });
+    </script>
