--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -93,15 +93,12 @@
             </div>
         </div>
 </form>
-@section Scripts {
-   
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-    <script>
+<script>
+    <link href="summernote.css">
+        <script src="summernote.js"> </script>
         $(document).ready(function () {
             $('#Description').summernote({
                 height: 250
             });
         });
     </script>
-}
